flux/infra/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeSelector:
        db: "true"
      tolerations:
        - key: db
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          resources:
            requests:
              cpu: 33m
              memory: 430Mi
            limits:
              # memory: 430Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          hostPath:
            path: /export/Root/Volumes/postgres
