flux/infra/postgres/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  type: NodePort
  selector:
    apps/kubernetes.io/name: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30432
