flux/infra/postgres/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgres
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`postgres.home`)
      kind: Rule
      services:
        - name: postgres
          port: 5432
